# HelloProjectCrossPlatform

./: .gitignore  CMakeLists.txt  README.md  commands.txt
src/: main.cpp  my_header.cpp
